networking/NetworkPolicy/ingress/03_NetworkPolicy_allow_from_namespace.yml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: allow-from-demo-2
spec:
  podSelector:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          project: demo-net2
