networking/NetworkPolicy/ingress/05_NetworkPolicy_allow_from_namespace.yml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: allow-from-net-trusted
spec:
  podSelector:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          net: trusted
